# space_editor

./: Cargo.toml  publish.bat
assets/models/: Test.glb
assets/scenes/: lofi_test.scn.ron  play_scene.scn.ron
assets/shaders/: toon_shader.wgsl
game/: Cargo.toml
game/src/: character_controller.rs  game_management.rs  lib.rs  main.rs  projectile.rs
modules/avian3d_plugin/: Cargo.toml
modules/avian3d_plugin/src/: collider.rs  lib.rs  registry.rs  spatial_query.rs
src/: main.rs
