[package]
name = "game_app"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Mathew Sherry <mjsherry248@gmail.com>"]
description = "Your game description"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

# for Linux
[target.x86_64-unknown-linux-gnu]
linker = "clang"
rustflags = ["-C", "link-arg=-fuse-ld=lld"]

# for Windows
[target.x86_64-pc-windows-msvc]
linker = "rust-lld.exe"

[lib]
name = "game_lib"
path = "src/lib.rs"
required-features = ["bevy_xpbd_3d"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy.workspace = true
space_prefab.workspace = true
space_bevy_xpbd_plugin.workspace = true
workspace-hakari = { version = "0.1", path = "../workspace-hakari" }
belly = { git = "https://github.com/jkb0o/belly.git" }
bevy_dolly = { version = "0.0.3" }
bevy_hanabi = "0.11.0"
