[package]
name = "space_avian3d_plugin"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
description = "Space Avian3d plugin for space_editor crate"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy.workspace = true 
space_editor_ui.workspace = true
bevy-inspector-egui.workspace = true 
avian3d = {version="0.1.2", default-features = false, features = ["3d", "f32", "collider-from-mesh", "debug-plugin", "default-collider", "parry-f32"]}

[lints]
workspace = true

[lib]
name = "space_avian3d_lib"
path = "src/lib.rs"